--- a/scss/components/_multimedia.scss
+++ b/scss/components/_multimedia.scss
@@ -1,22 +1,7 @@
 // MULTIMEDIA
 .multimedia {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        "subtitleVideo"
-        "videoContainer"
-        "subtitleMap"
-        "mapContainer";
-    place-content: center;
-
-    .subtitleVideo {
+    .subtitle-video {
         grid-area: subtitleVideo;
-        margin: 2rem;
-        color: $color-font-secondary;
-        padding: 0.5rem;
-        background-color: $color-violet;
-        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-        border-radius: 0.5rem;
     }
 
     .videoContainer {
@@ -25,14 +10,14 @@
 
     .subtitleMap {
         grid-area: subtitleMap;
-        @extend .subtitleVideo;
+
     }
 
     .mapContainer {
         grid-area: mapContainer;
     }
 
-    iframe {
+    &__iframe {
         border-radius: 0.5rem;
         margin: 3rem;
         box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
