--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -1,76 +1,118 @@
 // CONTAINERS
-.containerContent {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
-    grid-auto-rows: 26rem;
-    grid-template-rows: repeat(2, auto);
-    gap: 4rem;
-    padding: 2rem;
-    place-items: center;
-    place-content: center space-around;
-    justify-items: center;
-    color: $color-font-primary;
-    font-family: $font-secondary;
-    font-size: 1.2rem;
-    border-radius: 0.5rem;
+.products {
+    @include subtitle;
 
-    .filters {
-        grid-column: 1/-1;
-
-        select {
-            width: 18rem;
-            height: 2rem;
-            font-size: 0.95rem;
-            font-family: $font-tertiary;
-            color: $color-font-primary;
-            background-color: $color-bg-primary;
-            border: none;
-            border-radius: 0.5rem;
-            margin: 1rem;
-            box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-        }
-
-        h4 {
-            color: $color-font-secondary;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            background-color: $color-green;
-            box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-        }
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+        grid-auto-rows: 26rem;
+        grid-template-rows: repeat(2, auto);
+        gap: 4rem;
+        padding: 2rem;
+        place-items: center;
+        place-content: center space-around;
+        justify-items: center;
+        color: $color-font-primary;
+        font-family: $font-secondary;
+        font-size: 1.2rem;
+        border-radius: 0.5rem;
     }
 
-    @include subtitle();
+    &__filters {
+        grid-column: 1/-1;
+    }
+
+    &__category,
+    &__order {
+        width: 18rem;
+        height: 2rem;
+        font-size: 0.95rem;
+        font-family: $font-tertiary;
+        color: $color-font-primary;
+        background-color: $color-bg-primary;
+        border: none;
+        border-radius: 0.5rem;
+        margin: 1rem;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+    }
+
+    &__filters-title {
+        color: $color-font-secondary;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        background-color: $color-green;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+    }
 }
 
-.containerContentHome {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, auto);
-    padding: 2rem;
+.home {
+    @include subtitle;
 
-    .productsHome {
+    &__container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, auto);
+        padding: 2rem;
+    }
+
+    &__products {
         display: flex;
         flex-wrap: nowrap;
         overflow: auto;
         gap: 1.25rem;
         padding: 1.25rem;
-
-        .productCardHome {
-            flex: 0 0 auto;
-
-            .badgeOff {
-                background-color: $color-green;
-                color: $color-font-secondary;
-                font-family: $font-secondary;
-                left: 80%;
-                top: 11%;
-                border-width: 0.5rem;
-                border-color: $color-font-primary;
-                font-size: 1.9rem;
-                box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-            }
-        }
     }
 
-    @include subtitle();
+}
+
+.product-card {
+
+    @include card;
+
+    &--badge-off {
+        background-color: $color-green;
+        color: $color-font-secondary;
+        font-family: $font-secondary;
+        left: 80%;
+        top: 11%;
+        border-width: 0.5rem;
+        border-color: $color-font-primary;
+        font-size: 1.9rem;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+    }
+}
+
+.form {
+    @include subtitle;
+
+    &__container {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-areas:
+            "subtitleForm"
+            "form";
+        gap: 2rem;
+        padding: 2rem;
+        color: $color-font-primary;
+        font-family: $font-secondary;
+        font-size: 1.2rem;
+        border-radius: 0.5rem;
+
+    }
+}
+
+.multimedia {
+    @include subtitle;
+
+    &__container {
+        padding: 0 2rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "subtitleVideo"
+            "videoContainer"
+            "subtitleMap"
+            "mapContainer";
+        place-content: center;
+    }
 }
