--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -15,7 +15,11 @@ html {
         font-size: 100%;
     }
 
-    @include breakpoint($bp: 3840px) {
+    @include breakpoint($bp: 3700px) {
         font-size: 120%;
+    }
+
+    @include breakpoint($bp: 3840px) {
+        font-size: 150%;
     }
 }
