--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@
 @import './vendors/cdn';
 @import './base/fonts';
 @import './base/reset';
-@import './components/animations';
+// @import './components/animations';
 @import './components/buttons';
 @import './components/carousel';
 @import './components/containers';
