--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,5 +1,5 @@
 // BODY
-body {
+.body {
 
     h1,
     h2,
@@ -16,10 +16,10 @@ body {
         margin: 0;
     }
 
-    background-image: linear-gradient(to top, $color-bg-primary, $color-bg-secondary);
+    background-image: linear-gradient(45deg, $color-bg-primary 20%,$color-blue, $color-pink 60%, $color-bg-secondary 20%);
     color: $color-font-primary;
 
-    .form-control:focus {
+    input:focus, textarea:focus {
         background-color: $color-bg-secondary;
         color: $color-font-primary;
     }
