--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -3,5 +3,6 @@
     text-align: center;
     font-family: $font-secondary;
     color: $color-font-primary;
-    background-image: linear-gradient(to top, $color-bg-primary, $color-bg-secondary);
+    // background-image: linear-gradient(to top, $color-bg-primary, $color-bg-secondary);
+    
 }
