--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -418,7 +418,7 @@
     grid-area: totalPrice; }
 
 .body {
-  background-image: linear-gradient(45deg, #12181B 20%, #51C5F7, #ff0087 60%, #2A2E35 20%);
+  background-image: linear-gradient(to top, #12181B, #2A2E35);
   color: #F5F5F5; }
   .body h1,
   .body h2,
