--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -16,7 +16,7 @@
         margin: 0;
     }
 
-    background-image: linear-gradient(45deg, $color-bg-primary 20%,$color-blue, $color-pink 60%, $color-bg-secondary 20%);
+    background-image: linear-gradient(to top, $color-bg-primary, $color-bg-secondary);
     color: $color-font-primary;
 
     input:focus, textarea:focus {
